@@ -9,6 +9,17 @@ ext4
 reiserfs
 """
 
+mountpoints = """
+/
+/boot
+/home
+/opt
+/root
+/tmp
+/usr
+/var
+"""
+
 
 [ 'text_to_comboBox' ]
 comboBox_mountpoints = """
