@@ -9,5 +9,6 @@ pyfll-installer (001-1) unstable; urgency=low
   * tableWidget shows the text now 
   * cd '/home/hjt/fll/pyfll-installer/trunk'
   * timzone file and supported filesystem changed to pyfll-installer.conf
+  * mountpoint to tableWidget added 
 
- -- Horst Tritremmel <hjt@sidux.com>  Fri, 18 Apr 2008 11:42:00 +0200
+ -- Horst Tritremmel <hjt@sidux.com>  Fri, 18 Apr 2008 12:40:43 +0200
